[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Basic/Textures/KS-Signal.png" type="Texture" id=1]
[ext_resource path="res://Resources/Basic/SignalTypes/Vo/Light/Vo-Sig.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Resources/Basic/SignalTypes/Vo/Light/VoLight.gd" type="Script" id=3]
[ext_resource path="res://Resources/Basic/SignalTypes/VoTafel.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Resources/Basic/Materials/vo_tafel.tres" type="Material" id=5]

[sub_resource type="SpatialMaterial" id=1]
params_cull_mode = 2
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=3]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=5]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[node name="VisualInstance" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.667 )
material_override = SubResource( 1 )
mesh = ExtResource( 2 )
material/0 = null

[node name="OrangeVo1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 2.85173, 1.72741 )
material_override = SubResource( 2 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="OrangeVo1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="OrangeVo2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 3.1307, 2.07594 )
material_override = SubResource( 2 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="OrangeVo2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="GreenVo1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 2.85136, 1.8973 )
material_override = SubResource( 6 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="GreenVo1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null

[node name="GreenVo2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 3.13094, 2.24766 )
material_override = SubResource( 6 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="GreenVo2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null

[node name="VoTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.677 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )
